--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@ body {
 
 h1 {
   font-size: 17px;
-  font-weight: bold;
   margin-top: 0;
 }
 
@@ -19,6 +18,6 @@ p {
   margin: 0;
 }
 
-.toDocument {
+.to-document {
   color: green;
 }
